--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -7,5 +7,11 @@
   "license": "ASL",
   "dependencies": {
     "express": "~4.14.x"
+    "description": "Hello World!",
+    "main": "app.js",
+    "scripts": {
+	    "start": "node app.js"
+    },
+    "author": "Red Hat Training",
   }
 }
